# plex-subtitle-sync

./: README.md  README.txt  config.example.json  install-windows.ps1  install.sh  pyproject.toml  requirements.txt  run-windows.ps1  run_daemon.py  subtitle-autosync.service
Contents/: DefaultPrefs.json  Info.plist
Contents/Code/: __init__.py  subtitle_sync.py  subtitle_translate.py
tests/: test_run_daemon.py  test_subtitle_sync.py  test_subtitle_translate.py
