[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "plex-auto-subs"
version = "1.0.0"
description = "Plex plugin that auto-syncs and auto-translates subtitles on playback — no config, no API keys"
readme = "README.txt"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = ["ffsubsync", "argostranslate"]

[project.scripts]
plex-auto-subs = "run_daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Contents*"]
